// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests AddWords Renders correctly: from Parent 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item"
  />,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -10,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "55.55555555555556%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="react-reveal"
              style={
                Object {
                  "opacity": undefined,
                }
              }
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled MuiButton-fullWidth Mui-disabled"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={-1}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1
                    </span>
                    <h6
                      className="MuiTypography-root MuiTypography-h6"
                    >
                      parent
                    </h6>
                  </div>
                </span>
              </button>
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink={false}
                htmlFor="name"
                id="name-label"
              >
                Find a domain
              </label>
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoComplete="off"
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  data-testid="testSearch"
                  disabled={false}
                  id="name"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 375,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="intersect.svg"
            height="100%"
            src="intersect.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.0
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    kid0
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    kid1
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.2
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    kid2
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ 1 subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    parent
                  </p>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="parent.svg"
            height="100%"
            src="parent.svg"
            width={75}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -10,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.1
                    </span>
                    <p
                      className="MuiTypography-root MuiTypography-body1"
                    >
                      kid1
                    </p>
                  </div>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "55.55555555555556%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="react-reveal"
              style={
                Object {
                  "opacity": undefined,
                }
              }
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.2
                    </span>
                    <h6
                      className="MuiTypography-root MuiTypography-h6"
                    >
                      kid2
                    </h6>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink={false}
                htmlFor="name"
                id="name-label"
              >
                Find a domain
              </label>
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoComplete="off"
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  data-testid="testSearch"
                  disabled={false}
                  id="name"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="pillar.svg"
            height="100%"
            src="pillar.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.2.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.2.1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    soloData
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ even # of subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    parent
                  </p>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="parent.svg"
            height="100%"
            src="parent.svg"
            width={75}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -10,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "55.55555555555556%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="react-reveal"
              style={
                Object {
                  "opacity": undefined,
                }
              }
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.0
                    </span>
                    <h6
                      className="MuiTypography-root MuiTypography-h6"
                    >
                      kid0
                    </h6>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink={false}
                htmlFor="name"
                id="name-label"
              >
                Find a domain
              </label>
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoComplete="off"
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  data-testid="testSearch"
                  disabled={false}
                  id="name"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.1
                    </span>
                    <p
                      className="MuiTypography-root MuiTypography-body1"
                    >
                      kid1
                    </p>
                  </div>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 525,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeUpRight.svg"
            height="100%"
            src="teeUpRight.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeDown.svg"
            height="100%"
            src="teeDown.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="teeUpLeft.svg"
            height="100%"
            src="teeUpLeft.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0.0"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.0.0
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    evenData0
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.0.1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    evenData1
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0.2"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.0.2
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    evenData2
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "14.285714285714286%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0.3"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.0.3
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    evenData3
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ no subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.2
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    kid2
                  </p>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="parent.svg"
            height="100%"
            src="parent.svg"
            width={75}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -10,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "55.55555555555556%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="react-reveal"
              style={
                Object {
                  "opacity": undefined,
                }
              }
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.2.1
                    </span>
                    <h6
                      className="MuiTypography-root MuiTypography-h6"
                    >
                      soloData
                    </h6>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink={false}
                htmlFor="name"
                id="name-label"
              >
                Find a domain
              </label>
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoComplete="off"
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  data-testid="testSearch"
                  disabled={false}
                  id="name"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="pillar.svg"
            height="100%"
            src="pillar.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.2.1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.2.1.1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    depth=4
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`Tests AddWords Renders correctly: node w/ odd # of subdomains 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 75,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    parent
                  </p>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "100%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="parent.svg"
            height="100%"
            src="parent.svg"
            width={75}
          />
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -10,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.0"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.0
                    </span>
                    <p
                      className="MuiTypography-root MuiTypography-body1"
                    >
                      kid0
                    </p>
                  </div>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "55.55555555555556%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="react-reveal"
              style={
                Object {
                  "opacity": undefined,
                }
              }
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.1
                    </span>
                    <h6
                      className="MuiTypography-root MuiTypography-h6"
                    >
                      kid1
                    </h6>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink={false}
                htmlFor="name"
                id="name-label"
              >
                Find a domain
              </label>
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoComplete="off"
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  data-testid="testSearch"
                  disabled={false}
                  id="name"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 10,
            "width": "22.22222222222222%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
              >
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <div
                    style={
                      Object {
                        "textTransform": "capitalize",
                      }
                    }
                  >
                    <span
                      className="MuiTypography-root MuiTypography-overline"
                    >
                      1.2
                    </span>
                    <p
                      className="MuiTypography-root MuiTypography-body1"
                    >
                      kid2
                    </p>
                  </div>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <ul
      className="MuiGridList-root"
      style={
        Object {
          "margin": -0,
          "width": 375,
        }
      }
    >
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="leftEndcap.svg"
            height="100%"
            src="leftEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="intersect.svg"
            height="100%"
            src="intersect.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="span.svg"
            height="100%"
            src="span.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "transform": "scaleY(-1)",
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <img
            alt="rightEndcap.svg"
            height="100%"
            src="rightEndcap.svg"
            width={75}
          />
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1.0"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.1.0
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    oddData0
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1.1"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.1.1
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    oddData1
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        />
      </li>
      <li
        className="MuiGridListTile-root"
        style={
          Object {
            "height": "auto",
            "padding": 0,
            "width": "20%",
          }
        }
      >
        <div
          className="MuiGridListTile-tile"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
            disabled={false}
            id="1.1.2"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "bottom": 0,
                "height": "95%",
                "left": 0,
                "margin": "2.5%",
                "width": "95%",
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div>
                <div
                  style={
                    Object {
                      "textTransform": "capitalize",
                    }
                  }
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline"
                  >
                    1.1.2
                  </span>
                  <p
                    className="MuiTypography-root MuiTypography-body1"
                  >
                    oddData2
                  </p>
                </div>
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </div>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;
